# idea-layer

./: .gitignore  pyproject.toml
.github/workflows/: generate-frontier-board.yml:  publish-receipt.yml)  validate.yml
docs/: SPEC_IDEA_LAYER_v0.1.md  index.md
examples/: frontier_board.html  ir.sample.json  vr.sample.json
examples/carbon/v0.1/: clr.sample.json  cpr.sample.json  cvr.sample.json  run_emissions.sample.json
policies/carbon/v0.1/: quality_weights.json
policies/v0.1/: policy.json
schemas/carbon/v0.1/: clr.schema.json  cpr.schema.json  cvr.schema.json  run_emissions.schema.json
schemas/v0.1/: ir.schema.json  lr.schema.json  vr.schema.json
src/idea_layer/: __init__.py  anchors.py  cli.py  crypto.py  ids.py  receipts.py
tests/: test_schemas.py
tests/samples_ok/: ir.ok.json  lr.ok.json  vr.ok.json
tools/: anchor_local.py  verify_receipt.py
